fix [#34636] bpy.app.handlers.load_post not run on startup file loading after splashscreen